--- a/khoahoc/style/style.css
+++ b/khoahoc/style/style.css
@@ -98,10 +98,10 @@ nav{
 }
 .box
 {
-	border: 1px solid #000;
 	width: 250px;
 	background-color:#FFF;
 	display:inline-block;
+	box-shadow: 5px 5px 6px 0px black;
 }
 
 .box img
@@ -125,11 +125,11 @@ nav{
 }
 .box2
 {
-	border: 1px solid #000;
 	width: 250px;
 	background-color:#FFF;
 	display:inline-block;
 	margin-left: 100px;
+	box-shadow: 5px 5px 6px 0px black;
 }
 
 .box2 img
@@ -147,11 +147,11 @@ nav{
 }
 .box3
 {
-	border: 1px solid #000;
 	width: 250px;
 	background-color:#FFF;
 	display:inline-block;
 	margin-left: 100px;
+	box-shadow: 5px 5px 6px 0px black;
 }
 
 .box3 img
@@ -169,7 +169,7 @@ nav{
 }
 .box4
 {
-	border: 1px solid #000;
+    box-shadow: 5px 5px 6px 0px black;
 	width: 250px;
 	background-color:#FFF;
 	display:inline-block;
