--- a/Root/IE104.CK/styles/styles_template.css
+++ b/Root/IE104.CK/styles/styles_template.css
@@ -3,7 +3,6 @@
 body
 {
 	margin:0px;
-	font-size: 20px;
 	font-family:Arial, Helvetica, sans-serif
 }
 #container{
@@ -13,6 +12,7 @@ header
 {
 	background-color:#000000;
 	width:100%;
+	font-size: larger;
 }
 nav{
     display: flex;
@@ -87,30 +87,75 @@ nav{
 	font-size:18px;
 }
 
-footer
-{
-	background:#000;
-	color:#FFF;
-	padding:20px 0px;
+.footer {
+    color: lightgray;
+    padding: 35px;
+    background-color: black;
+    overflow: auto;
 }
 
-footer table tr td a
-{
-	color:#FFF;
-	text-decoration:none;
+
+.footer1 {
+    display: block;
+    float: left;
+    width: 430px;
 }
 
-footer table tr td a:hover
+.footer1 img
 {
-	text-decoration:underline;
-	color:#CCC;
+	height: 70px;
 }
 
-footer a img
-{
-	float:left;
-	margin-left:50px;
-	margin-right:50px;
-	width: 300px;
+.content1 {
+    margin: 20px 20px 0px 0px;
+}
 
+.f1 {
+    line-height: 25px;
+    padding: 5px;
+    margin: 0px;
+}
+
+.footer2 {
+    display: block;
+    float: left;
+    width: 200px;
+    margin: 0px 50px;
+}
+
+.h3white {
+    color: white;
+}
+
+.list {
+    list-style-type: none;
+    padding-left: 0px;
+    text-decoration: none;
+    line-height: 30px;
+}
+
+.line {
+    border-top: 1px solid rgb(70, 70, 70);
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+}
+
+.link {
+    text-decoration: none;
+    color: lightgray;
+}
+
+.footer3 {
+    display: block;
+    float: left;
+    width: 200px;
+    margin: 0px 50px;
+}
+
+.footer4 {
+    display: block;
+    float: left;
+    width: 300px;
+    margin: 0px 50px;
 }
