--- a/Root/IE104.CK/styles/styles_home.css
+++ b/Root/IE104.CK/styles/styles_home.css
@@ -11,17 +11,27 @@
 	background-color: rgba(230, 228, 222, 0.8); 
 }
 
-#detail #text
+#detail #intro
 {
 	width: 40%;
-	float:left;
+	display: inline-block;
+	min-width: 400px;
+}
+
+#detail #image
+{
+	display: inline-block;
+	width: 50%;
+	height: 80%;
+	margin-left: 5%;
+	min-width: 400px;
+	vertical-align: middle;
 }
 
 #detail #image img
 {
-	width: 50%;
-	height: 80%;
-	margin-left: 40px;
+	width: 100%;
+	height: 100%;
 }
 #reason
 {
