--- a/Root/IE104.CK/lecturer-detail/styles/styles_l.css
+++ b/Root/IE104.CK/lecturer-detail/styles/styles_l.css
@@ -29,7 +29,7 @@
 	height: 300px;
 }
 
-.detail {
+#detail {
     width: 70%;
     margin: auto;
 }
@@ -72,9 +72,67 @@ p {
   color: white;
 }
 
-/* Individual bars */
 .bar-html {width: 90%; height: 18px; background-color: #04AA6D;}
 .bar-css {width: 100%; height: 18px; background-color: #2196F3;}
 .bar-js {width: 80%; height: 18px; background-color: #00bcd4;}
 .bar-jq {width: 60%; height: 18px; background-color: #ff9800;}
 .bar-php {width: 70%; height: 18px; background-color: #f44336;}
+
+#course {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.box {
+  width: 250px;
+  background-color: #FFF;
+  box-shadow: 0px 0px 7px 0px black;
+  margin: 50px;
+}
+.box img {
+  width: 250px;
+  height: 200px;
+}
+.box .info {
+  margin: 10px;
+}
+.box .info p {
+  color: rgba(171, 171, 168, 0.7);
+}
+.cost {
+  text-align: right;
+  font-size: 18px;
+  color: #000;
+}
+/*html*/
+.box div.detail {
+  background-color: white;
+  position: absolute;
+  display: none;
+  filter: drop-shadow(0px 0px 7px black);
+  width: 250px;
+  height: 300px;
+  padding: 10px;
+  margin-top: -350px;
+  margin-left: 260px;
+  z-index: 1;
+}
+.box div.detail::after {
+  content: "";
+  position: absolute;
+  top: 33px;
+  left: 0px;
+  background: white;
+  margin-left: -5px;
+  transform: rotate(-45deg);
+  height: 10px;
+  width: 10px;
+  z-index: 0;
+}
+.box:hover div.detail {
+  display: block;
+}
+.box div.detail ul {
+  list-style: circle;
+  font-size: 18px;
+}
