--- a/Root/IE104.CK/styles/styles_learn.css
+++ b/Root/IE104.CK/styles/styles_learn.css
@@ -8,6 +8,13 @@ body
 }
 #container{
 	margin:0px;
+	display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: space-between;
+	padding: 10px;
 }
 header
 {
@@ -27,7 +34,6 @@ nav{
 #logo img
 {
 	height: 70px;
-	margin-left: 70px;
 }
 
 #left_content {
@@ -40,7 +46,7 @@ nav{
 h1 {
 	color: white;
 	text-align: center;
-	margin-left: 100px;
+	margin-left: 50px;
 	font-size: 40px;
 	margin-top: 0px;
 	margin-bottom: 0px;
