--- a/Root/IE104.CK/styles/styles_template.css
+++ b/Root/IE104.CK/styles/styles_template.css
@@ -37,7 +37,10 @@ nav{
 	padding-right:50px;
 	float:right;
 }
-#main-menu li a,#main-menu li i {
+#main-menu li{
+	margin-left:20px;
+}
+#main-menu li a{
 	color:#f8f8f8;
 	display:block;
 	padding: 25px 20px;
@@ -48,6 +51,14 @@ nav{
 	background-color: white;
 	border-radius: 10px;
 }
+#log-in {
+	background-color: white;
+	border-radius: 10px;
+}
+#sign-up {
+	border: white 1px solid;
+	border-radius: 10px;
+}
 #main-menu li img
 {
 	height: 50px;
@@ -55,33 +66,7 @@ nav{
 	border-radius:50%;
 	padding: 10px;
 }
-#main-menu ul.sub-menu{
-     position:absolute;
-	 background: #131921;
-	 padding:0px 0px;
-	 list-style:none;
-	 width:200px;
-	 border: 1px solid #434343 ;
-	 text-align:right;
-	 right:50px;
-	 display:none;
-}
-#main-menu li:hover ul.sub-menu 
-{
-    display:block;
-}
-#main-menu ul.sub-menu a
-{
-	padding: 8px 15px;
-}
-.sub-menu li a
-{
-	color: white;
-}
 
-#main-menu ul.sub-menu li:last-chid a{
-	border:none;
-}
 #fas
 {
 	color:#FFF;
