Fix Course, add Nav to course type

--- a/Root/IE104.CK/courses-type/styles/styles_ct.css
+++ b/Root/IE104.CK/courses-type/styles/styles_ct.css
@@ -8,6 +8,13 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+#nav {
+	margin-left: 50px;
+}
+.nav {
+    color: steelblue;
+    text-decoration: none;
+}
 .box {
   width: 250px;
   background-color: #FFF;
