--- a/Root/IE104.CK/courses/style/style.css
+++ b/Root/IE104.CK/courses/style/style.css
@@ -2,12 +2,16 @@
 /* CSS Document */
 body{
 	font-family:Arial, Helvetica, sans-serif ;
-	font-size: 20px;
 	
 }
 .courses-group
 {
 	max-height: 500px;
+}
+
+#html,#css,#js,#jquery,#PHP {
+	padding: 10px 50px 50px 50px;
+	margin-top: 0px;
 }
 #html,#js,#PHP
 {
@@ -457,7 +461,6 @@ body{
 	height: 300px;
     margin-top: -350px;
     margin-left: 10px;
-]
 	padding: 10px;
 }
 #PHP .box:hover div.detail
