--- a/Root/IE104.CK/styles/styles_template.css
+++ b/Root/IE104.CK/styles/styles_template.css
@@ -13,6 +13,9 @@ header
 	background-color:#000000;
 	width:100%;
 	font-size: larger;
+	position: sticky;
+	top: 0px;
+	left: 0px;
 }
 nav{
     display: flex;
