--- a/Root/IE104.CK/courses-type/styles/styles_ct.css
+++ b/Root/IE104.CK/courses-type/styles/styles_ct.css
@@ -1,25 +1,51 @@
 @charset "utf-8";
 /* CSS Document */
+#detail
+{
+	padding:30px;
+	height:auto;	
+	background-color: rgba(230, 228, 222, 0.8); 
+}
+
+#detail #intro
+{
+	width: 40%;
+	display: inline-block;
+	min-width: 400px;
+  font-size: larger;
+}
+
+#detail #image
+{
+	display: inline-block;
+	width: 50%;
+	height: 80%;
+	margin-left: 5%;
+	min-width: 400px;
+	vertical-align: middle;
+}
+
+#detail #image img
+{
+	width: 100%;
+	height: 100%;
+}
 #title {
+  font-size: 40px;
+}
+.title {
   margin: 50px 0px 0px 50px;
 }
-#main_page {
+.main_page {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-}
-#nav {
-	margin-left: 50px;
-}
-.nav {
-    color: steelblue;
-    text-decoration: none;
 }
 .box {
   width: 250px;
   background-color: #FFF;
   box-shadow: 0px 0px 7px 0px black;
-  margin: 50px;
+  margin: 20px 50px;
 }
 .box img {
   width: 250px;
@@ -36,7 +62,6 @@
   font-size: 18px;
   color: #000;
 }
-/*html*/
 .box div.detail {
   background-color: white;
   position: absolute;
