--- a/Root/IE104.CK/lecturer-detail/styles/styles_l.css
+++ b/Root/IE104.CK/lecturer-detail/styles/styles_l.css
@@ -97,14 +97,14 @@ p {
   margin: 10px;
 }
 .box .info p {
-  color: rgba(171, 171, 168, 0.7);
+  color: gray;
 }
 .cost {
   text-align: right;
   font-size: 18px;
   color: #000;
 }
-/*html*/
+
 .box div.detail {
   background-color: white;
   position: absolute;
@@ -116,6 +116,7 @@ p {
   margin-top: -350px;
   margin-left: 260px;
   z-index: 1;
+  line-height: 150%;
 }
 .box div.detail::after {
   content: "";
