--- a/Root/IE104.CK/course-detail/styles/styles_c_detail.css
+++ b/Root/IE104.CK/course-detail/styles/styles_c_detail.css
@@ -23,23 +23,127 @@
     text-decoration: none;
 }
 
-#join {
-    font-size: large;
-    padding: 10px;
-    border-radius: 5px;
-    font-weight: bold;
-    background-color: white;
-}
-
 #right_side {
     margin: 20px;
 }
 
 .detail {
-    width: 70%;
     margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#left_detail {
+    margin: 20px;
+    max-width: 780px;
 }
 
 p {
+    line-height: 150%;
+}
+
+#rate {
+    text-align: center;
+    font-size: xx-large;
+}
+
+#subrate {
+    font-size: large;
+}
+
+.checked {
+    color: orange;
+}
+
+.time {
+    font-style: italic;
+}
+
+section {
+    background-color: white;
+    padding: 5px 15px;
+    margin: 10px 0px;
+    border-bottom: 1px solid gray;
+}
+
+#new {
+    display: none;
+}
+
+form {
+    background-color: rgba(70, 130, 180, 0.2);
+    padding: 20px;
+    margin: 10px 0px;
+    border: 1px solid gray;
+}
+
+form h3 {
+    margin-top: 0px;
+}
+
+#send {
+    background-color: white;
+}
+
+#username {
+    padding: 5px 10px;
+}
+
+#des {
+    width: 100%;
+    height: 200px;
+}
+
+#send {
+    padding: 5px 25px;
+}
+
+#right_gr {
+    position: sticky;
+    top: 15%;
+    padding: 25px;
+    box-shadow: 0px 0px 10px 0px black;
+    margin: 20px;
+    width: 200px;
+}
+
+#join, #save {
+    font-size: large;
+    padding: 10px;
+    width: 100%;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+#join {
+    color: white;
+    background-color: steelblue;
+    border: solid 2px steelblue;
+}
+
+#save {
+    background-color: white;
+    border: solid 2px black;
+}
+
+#review {
+    margin: 10px 0px;
+}
+
+#review ul {
+    padding-left: 15px;
+    margin-top: 0px;
+}
+
+#review h4 {
+    width: 100%;
+    margin: 0px;
+    line-height: 150%;
+}
+
+#review ul li {
+    width: 100%;
+    margin: 0px;
     line-height: 150%;
 }
